  the text color.
- Changed to a clickable link the bottom URL in the PHP APC graph, and fixed
  the text color.
- Added custom url config option 'logo_top_url' for the top logo link. [#90]
- Added support for postfix-policyd-spf-perl SPF handler in Mail graph.
	(thanks to Claude Nadon, claude AT ws01.info)
- Added support for process names that include spaces in Process graph. [#94]
- Fixed the text color in the bottom URL of the Bind graph.
- Fixed the text color in the bottom URL of the Icecast Streaming Server graph.
- Fixed a problem with multiple 'ApplicationInstance' tags in Wowza Server
  graph. [#88]
- Fixed the text color in the bottom URL of the Wowza graph.
- Fixed to avoid results garbled when a defined Application is shutdown or if
  multiple servers are defined in the Wowza graph. [#89]
- Fixed a pair of incorrectly defined values in the 'system' graph that affected
  the new RRDtool 1.5 branch with the message "Function update_pdp_prep, case
  DST_GAUGE - Cannot convert '' to float". [#91]
- Fixed a parsing error when using process names with the character colon.
	(thanks to Harold Pena, haroldpena AT hotmail.com for pointing this out)
- Fixed to put the output of the 'addendum_script' at the bottom of the email,
  and to avoid being repeated on each graph in the 'emailreports' graph.
	(thanks to Dirk Tanneberger, os AT tanneberger.biz)
- Fixed a wrong example in the documentation when showing how to define the same
  port number using IPv4 and IPv6 in the 'port' graph.
	(thanks to Dirk Tanneberger, os AT tanneberger.biz for pointing this out)
- Fixed to not show the red background color in listening network ports using
  IPv6 in the 'port' graph.
	(thanks to Dirk Tanneberger, os AT tanneberger.biz for pointing this out)
- Small cosmetic changes.



3.7.0  - 12-Mar-2015
====================
- Added a complete statistical VerliHub (verlihub) graph. [#72]
- Added a complete graph for Varnish proxy cache.