@@ -231,10 +231,6 @@ secure_log_date_format = %b %e
 	rigid = 2, 0, 2, 0
 	limit = 100, 1000, 100, 1000
 	<alerts>
-		rootfs_enabled = n
-		rootfs_timeintvl = 3600
-		rootfs_threshold = 100
-		rootfs_script = /path/to/script.sh
 	</alerts>
 </fs>
 
